examples/tekton/tekton/redis.yaml
---

apiVersion: v1
kind: Pod
metadata:
  name: cicd-redis-server
  labels:
    app: cicd-redis-server
spec:
  containers:
    - image: redis:latest
      name: cicd-redis-server

---

apiVersion: v1
kind: Service
metadata:
  name: cicd-redis-server
spec:
  type: NodePort
  selector:
    app: cicd-redis-server
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 32444
