examples/tekton/tekton/tekton-dashboard-mods.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/version: v0.8.0
    dashboard.tekton.dev/release: v0.8.0
    version: v0.8.0
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  type: NodePort
  ports:
  - name: http
    port: 9097
    protocol: TCP
    targetPort: 9097
    nodePort: 32222
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
