examples/tekton/tekton/dashboard-ingress.yaml

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  labels:
    bitsofinfo-ingress: "yes"
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: cicdstatemgr-tekton.local
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
